[gd_scene load_steps=8 format=4 uid="uid://bsteglra7hwcu"]

[ext_resource type="Script" uid="uid://bd6r7obxm0tda" path="res://Scripts/phase_1.gd" id="1_rtg1q"]
[ext_resource type="TileSet" uid="uid://cr61rcvxrur8h" path="res://TileSets/Room1TileSet.res" id="2_tq6nv"]
[ext_resource type="PackedScene" uid="uid://cj1s32in6tw1k" path="res://Scenes/robot.tscn" id="3_162ju"]
[ext_resource type="PackedScene" uid="uid://biy6wyjvx4qj3" path="res://Scenes/right_panel.tscn" id="4_rtg1q"]
[ext_resource type="PackedScene" uid="uid://cp52gaebpptxg" path="res://Scenes/trash.tscn" id="4_tq6nv"]
[ext_resource type="Theme" uid="uid://b5fspwopkw78g" path="res://Themes/MarginTheme.tres" id="4_u6l8r"]
[ext_resource type="PackedScene" uid="uid://gmeoe7uq2h4l" path="res://Scenes/code_block.tscn" id="6_il7cl"]

[node name="Phase1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtg1q")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 800
dragging_enabled = false
touch_dragger_enabled = true

[node name="TopPanel" type="Panel" parent="VSplitContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VSplitContainer/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 1330
dragging_enabled = false
touch_dragger_enabled = true

[node name="LeftPanel" type="Panel" parent="VSplitContainer/TopPanel/HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 6

[node name="SubViewport" type="SubViewport" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(221, 128)
render_target_update_mode = 4

[node name="TileMapLayer" type="TileMapLayer" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport"]
tile_map_data = PackedByteArray("AAAGAAcAAQAOAAoAAAAHAAcAAQAOAAoAAAANAAYAAQAOAAoAAFANAAUAAQAOAAoAAFANAAQAAQAOAAoAAFANAAMAAQAOAAoAAFANAAIAAQAOAAoAAFANAAEAAQAOAAoAAFANAAAAAQAOAAoAAFAMAAAAAQAOAAoAAAADAAAAAQAOAAoAAAACAAAAAQAOAAoAAAAAAAIAAQAOAAoAAFAAAAEAAQAOAAoAAFAAAAMAAQAOAAoAAFAAAAQAAQAOAAoAAFAAAAUAAQAOAAoAAFAAAAYAAQAOAAoAAFAAAAAAAQAOAAoAAAABAAAAAQAOAAoAAAACAAMAAQAEAAsAAGABAAMAAQAGAAQAAAALAAMAAQAEAAsAAGAMAAMAAQAGAAQAAAABAAQAAQAGAAQAAAAKAAQAAQAGAAQAAAALAAQAAQAEAAsAAGAMAAUAAQAGAAQAAAALAAUAAQAEAAsAAGAKAAUAAQAEAAsAAAAJAAUAAQAEAAsAAAAIAAUAAQAEAAsAAAAHAAUAAQAEAAsAAAAGAAUAAQAEAAsAAAAEAAUAAQAEAAsAAAACAAUAAQAEAAsAAGABAAUAAQAGAAQAAAABAAYAAQAGAAQAAAACAAYAAQAGAAQAAAADAAYAAQAGAAQAAAAEAAYAAQAGAAQAAAAGAAYAAQAGAAQAAAAHAAYAAQAGAAQAAAAIAAYAAQAGAAQAAAAJAAYAAQAGAAQAAAAMAAYAAQAGAAQAAAALAAYAAQAGAAQAAAAKAAYAAQAGAAQAAAAMAAIAAQAGAAQAAAAMAAEAAQAGAAQAAAACAAEAAQAEAAsAAGABAAEAAQAGAAQAAAABAAIAAQAGAAQAAAACAAIAAQAEAAsAAGALAAIAAQAEAAsAAGANAAcAAQAOAAoAAAAMAAcAAQAOAAoAAAALAAcAAQAOAAoAAAAKAAcAAQAOAAoAAAAJAAcAAQAOAAoAAAAIAAcAAQAOAAoAAAAAAAcAAQAOAAoAAAABAAcAAQAOAAoAAAACAAcAAQAOAAoAAAADAAcAAQAOAAoAAAAEAAcAAQAOAAoAAAAFAAcAAQAOAAoAAAADAAIAAQAGAAQAAAADAAMAAQAGAAQAAAAGAAQAAQAGAAQAAAAHAAQAAQAGAAQAAAAJAAQAAQAGAAQAAAADAAEAAQAGAAQAAAADAAUAAQAEAAsAAAAKAAMAAQAGAAQAAAAHAAMAAQAEAAsAAAAFAAMAAQAEAAsAAAAzADYAAQADABQAAAACAAQAAQAEAAsAAGADAAQAAQAGAAQAAAAFAAQAAQAGAAQAAAAFAAUAAQAEAAsAAAAFAAYAAQAGAAQAAAAEAAEAAQAGAAQAAAAEAAIAAQAEAAsAAAAEAAMAAQAEAAsAAAALAAEAAQAGAAQAAAAKAAEAAQAGAAQAAAAJAAEAAQAGAAQAAAAIAAEAAQAGAAQAAAAHAAEAAQAGAAQAAAAGAAEAAQAGAAQAAAAFAAEAAQAGAAQAAAAIAAQAAQAGAAQAAAAEAAQAAQAGAAQAAAAFAAIAAQAEAAsAAAAGAAIAAQAEAAsAAAAHAAIAAQAEAAsAAAAIAAIAAQAEAAsAAAALAAAAAQAOAAoAAAAKAAAAAQAOAAoAAAAJAAAAAQAOAAoAAAAIAAAAAQAOAAoAAAAHAAAAAQAOAAoAAAAGAAAAAQAOAAoAAAAFAAAAAQAOAAoAAAAEAAAAAQAOAAoAAAAAAP//AQAOAAoAAAABAP//AQAOAAoAAAACAP//AQAOAAoAAAADAP//AQAOAAoAAAAEAP//AQAOAAoAAAAFAP//AQAOAAoAAAAGAP//AQAOAAoAAAAHAP//AQAOAAoAAAD//wIAAQAOAAoAAFD//wMAAQAOAAoAAFD//wQAAQAOAAoAAFD//wUAAQAOAAoAAFAMAAQAAQAGAAQAAAAGAAMAAQAEAAsAAAAIAAMAAQAEAAsAAAAKAAIAAQAEAAsAAAAJAAIAAQAEAAsAAAAJAAMAAQAEAAsAAAA=")
tile_set = ExtResource("2_tq6nv")

[node name="Robot" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("3_162ju")]
position = Vector2(23.666668, 24.833334)

[node name="Trash" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(24, 56)

[node name="Trash2" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(24, 104)

[node name="Trash3" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(88, 104)

[node name="Trash4" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(152, 104)

[node name="Trash5" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(200, 104)

[node name="Trash6" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(200, 56)

[node name="Trash7" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(200, 24)

[node name="Trash8" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(152, 24)

[node name="Trash9" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(104, 24)

[node name="Trash10" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(56, 24)

[node name="Trash11" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(56, 72)

[node name="Trash12" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(104, 72)

[node name="Trash13" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(152, 72)

[node name="Trash14" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("4_tq6nv")]
position = Vector2(168, 56)

[node name="ProgressBar" type="ProgressBar" parent="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer"]
layout_mode = 2
step = 1.0

[node name="RightPanel" parent="VSplitContainer/TopPanel/HSplitContainer" node_paths=PackedStringArray("robot") instance=ExtResource("4_rtg1q")]
layout_mode = 2
robot = NodePath("../LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Robot")
default_code = Array[int]([1, 8, 6])

[node name="BottomPanel" type="Panel" parent="VSplitContainer"]
clip_contents = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_u6l8r")

[node name="HFlowContainer" type="HFlowContainer" parent="VSplitContainer/BottomPanel/MarginContainer"]
layout_mode = 2

[node name="CodeBlock" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 1

[node name="CodeBlock2" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 2

[node name="CodeBlock3" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 3

[node name="CodeBlock4" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 4

[node name="CodeBlock5" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 5

[node name="CodeBlock6" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 6

[node name="CodeBlock7" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 7

[node name="CodeBlock8" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 8

[node name="CodeBlock9" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 9

[node name="CodeBlock10" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 10

[node name="CodeBlock11" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 11

[node name="CodeBlock12" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 12

[node name="CodeBlock13" parent="VSplitContainer/BottomPanel/MarginContainer/HFlowContainer" instance=ExtResource("6_il7cl")]
layout_mode = 2
keep_pressed_outside = true
text = "CODEBLOCK"
action_type = 13

[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash2" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash3" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash4" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash5" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash6" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash7" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash8" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash9" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash10" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash11" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash12" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash13" to="." method="_on_trash_body_entered"]
[connection signal="body_entered" from="VSplitContainer/TopPanel/HSplitContainer/LeftPanel/VBoxContainer/SubViewportContainer/SubViewport/Trash14" to="." method="_on_trash_body_entered"]
